--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "get-image-colors": "^4.0.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.0",
+    "nodemon": "^2.0.20",
     "request": "^2.88.2",
     "spotify-web-api-js": "^1.5.2"
   },
